Add html and UI logic.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -8,6 +9,23 @@
     <title>Beep-Boop</title>
   </head>
   <body>
+    <div class="container">
 
+    <h1>Beep-Boop</h1>
+    <form id="beep-boop">
+      <p>Enter your number in the beep-boop machine and see what happens!</p>
+      <input id="inputNumber" type="text">
+      <br>
+      <br>
+    <button type="submit">Submit!</button>
+    </form>
+
+    
+    <div id="result">
+
+    </div>
+
+
+  </div
   </body>
 </html>
